virt01/manual/tools/powerdns_ns2/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: powerdns-ns2
  labels:
    app: powerdns-ns2
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: powerdns-ns2
  template:
    metadata:
      labels:
        app: powerdns-ns2
    spec:
      serviceAccountName: powerdns-sa
      containers:
      - name: powerdns-ns2
        image: ghcr.io/nforceroh/k8s-pdns:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 10m
            memory: 128Mi
        ports:
        - containerPort: 53
          name: dns-tcp
          protocol: TCP
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        - containerPort: 8081
          name: api-tcp
          protocol: TCP
        volumeMounts:
          - name: pdns-config
            mountPath: /etc/pdns/pdns.conf
            subPath: pdns.conf
      volumes:
        - name: pdns-config
          configMap:
            name: powerdns-ns2-config
