virt01/manual/tools/powerdns_ns2/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: powerdns-ns2-svc
  labels:
    app: powerdns-ns2
  annotations:
    metallb.universe.tf/address-pool: vlan1000-restricted
    external-dns.alpha.kubernetes.io/hostname: ns2.nf.lab
    metallb.universe.tf/loadBalancerIPs: 10.0.0.3
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack  
  selector:
    app: powerdns-ns2
  ports:
  - name: ns2-dns-tcp-svc-port
    port: 53
    protocol: TCP
    targetPort: 53
  - name: ns2-dns-udp-svc-port
    port: 53
    protocol: UDP
    targetPort: 53 
  - name: ns2-dns-api-svc-port
    port: 8081
    protocol: TCP
    targetPort: 8081
