virt01/manual/tools/powerdns_ns2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ns2-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ns2.nf.lab
spec:
  rules:
  - host: ns2.nf.lab
    http:
      paths:
      - backend:
          service:
            name: powerdns-ns2-svc
            port:
              number: 8081
        path: /
        pathType: Prefix
